--- a/etc/k3d.yaml
+++ b/etc/k3d.yaml
@@ -14,6 +14,9 @@ volumes:
   - volume: earthly:/mnt/earthly
     nodeFilters:
       - server:0
+  - volume: dind:/mnt/dind
+    nodeFilters:
+      - server:0
   - volume: /var/run/docker.sock:/var/run/docker.sock
     nodeFilters:
       - server:0
