--- a/Makefile.common
+++ b/Makefile.common
@@ -69,10 +69,10 @@ install:
 	mark -- configure site
 	$(MAKE) install-site
 
-install-circus:
-	if ! k3d cluster list circus -o json | jq -e -r '.[].nodes | map(select(.State.Status == "running")) | length' | grep ^3; then $(MAKE) circus; fi
-	argocd cluster add --yes --upsert k3d-circus
-	pod apply -f app/e/k3d-circus.yaml;
+install-%:
+	if ! k3d cluster list $(second) -o json | jq -e -r '.[].nodes | map(select(.State.Status == "running")) | length' | grep ^3; then $(MAKE) $(second); fi
+	argocd cluster add --yes --upsert k3d-$(second)
+	pod apply -f app/e/k3d-$(second).yaml;
 
 tilt:
 	pass hello
@@ -234,9 +234,16 @@ pull-repos: # Pull dev, app, home, and password-store repos
 	cd && git pull
 	cd && cd .password-store && git pull
 
-circus: # Provision circus server from control plane
+circus: # Provision circus from control plane
 	$(MAKE) pull-repos
 	env DEFN_DEV_HOST_PORT=6444 DEFN_DEV_HOST_API=host.k3d.internal \
+		DEFN_DEV_NAME=k3d-$@ \
+		$(MAKE) this name=$@
+	docker system prune -f
+
+smiley: # Provision smiley from control plane
+	$(MAKE) pull-repos
+	env DEFN_DEV_HOST_PORT=6445 DEFN_DEV_HOST_API=host.k3d.internal \
 		DEFN_DEV_NAME=k3d-$@ \
 		$(MAKE) this name=$@
 	docker system prune -f
