--- a/.env
+++ b/.env
@@ -11,15 +11,15 @@ CILIUM=0.12.1
 CLOUDFLARED=2022.10.0
 CODESERVER=4.7.1
 COREDNS=1.10.0
-COSIGN=1.12.1
+COSIGN=1.13.0
 CREDENTIALPASS=0.7.0
 CUE=0.4.3
 DIFFT=0.36.1
 DOCKER=20.10.18
-DOCTL=1.82.2
+DOCTL=1.83.0
 EARTHLY=0.6.25
-FLYCTL=0.0.404
-FULCIO=0.6.0
+FLYCTL=0.0.405
+FULCIO=1.0.0-rc.0
 GH=2.17.0
 GOLANG=1.19.2
 GORELEASER=1.11.5
@@ -51,7 +51,7 @@ PNPM=7.13.1
 POWERLINE=1.22.1
 PROTOC=3.20.1
 PYTHON=system
-REKOR=0.12.1
+REKOR=1.0.0-rc.1
 RUST=1.64.0
 SHELLCHECK=0.8.0
 SHFMT=3.5.1
