--- a/Makefile.common
+++ b/Makefile.common
@@ -229,10 +229,11 @@ pull-repos: # Pull dev, app, home, and password-store repos
 	cd && git pull
 	cd && cd .password-store && git pull
 
-circus: # Provision circus from control plane
+circus global: # Provision circus from control plane
 	$(MAKE) pull-repos
 	env DEFN_DEV_HOST_PORT=6444 DEFN_DEV_HOST_API=host.k3d.internal \
 		DEFN_DEV_NAME=k3d-$@ \
+		DOCKER_CONTEXT=host \
 		$(MAKE) this name=$@
 	docker system prune -f
 
