--- a/Makefile.common
+++ b/Makefile.common
@@ -261,7 +261,7 @@ droplet:
 		doctl compute droplet create k3d-control-droplet --region sfo3 --image 118023753 --size s-1vcpu-1gb --tag-name k3d --wait \
 		--user-data-file <(cat etc/droplet-user-data.template \
 			| sed 's#_TSKEY_#'$$(pass k3d-control-tskey)'#' \
-			| sed 's#_K3STOKEN_#'$$(docker exec k3d-control-server-0 cat /var/lib/rancher/k3s/server/node-token)'#')
+			| sed 's#_K3STOKEN_#'$$(docker --context host exec k3d-control-server-0 cat /var/lib/rancher/k3s/server/node-token)'#')
 
 dropoff:
 	-pod delete -n kube-system secret k3d-control-droplet.node-password.k3s
