--- a/Makefile.common
+++ b/Makefile.common
@@ -258,16 +258,16 @@ control: # Provision control plane from macOS
 droplet:
 	$(MAKE) dropoff
 	env DIGITALOCEAN_ACCESS_TOKEN="$$(pass DIGITALOCEAN_ACCESS_TOKEN)" \
-		doctl compute droplet create k3d-control-droplet --region sfo3 --image 118023753 --size s-1vcpu-1gb --tag-name k3d --wait \
+		doctl compute droplet create k3d-control-droplet$(n) --region sfo3 --image 118023753 --size s-1vcpu-1gb --tag-name k3d --wait \
 		--user-data-file <(cat etc/droplet-user-data.template \
 			| sed 's#_TSKEY_#'$$(pass k3d-control-tskey)'#' \
 			| sed 's#_K3STOKEN_#'$$(docker --context host exec k3d-control-server-0 cat /var/lib/rancher/k3s/server/node-token)'#')
 
 dropoff:
-	-pod delete -n kube-system secret k3d-control-droplet.node-password.k3s
-	-pod delete node k3d-control-droplet
+	-pod delete -n kube-system secret k3d-control-droplet$(n).node-password.k3s
+	-pod delete node k3d-control-droplet$(n)
 	-env DIGITALOCEAN_ACCESS_TOKEN="$$(pass DIGITALOCEAN_ACCESS_TOKEN)" \
-		doctl compute droplet delete k3d-control-droplet -f
+		doctl compute droplet delete k3d-control-droplet$(n) -f
 
 debug:
 	pod debug node/$(node) -it --image=ghcr.io/defn/dev:latest -- bash -il
