--- a/.earthly/config.yaml
+++ b/.earthly/config.yaml
@@ -6,3 +6,7 @@ global:
   local_registry_host: 'tcp://127.0.0.1:8371'
   buildkit_additional_args:
     - '--dns=1.1.1.1'
+  buildkit_additional_config: |
+    [registry."169.254.32.1:5000"]
+      http = true
+      insecure = true
