--- a/Makefile.common
+++ b/Makefile.common
@@ -56,7 +56,7 @@ install:
 	cd ~/.password-store && rm -rf .git && oras pull --plain-http --allow-path-traversal 169.254.32.1:5000/defn/bootstrap:password-store && git reset --hard && git clean -fd
 	rsync -ia ~/.password-store/home/.gnupg/. ~/.gnupg/.
 	$(MAKE) perms
-	$(MAKE) init-gpg
+	env GPG_TTY=$$(tty) $(MAKE) init-gpg
 
 	mark -- configure repos
 	mkdir -p ~/work/app
