--- a/Makefile.common
+++ b/Makefile.common
@@ -123,12 +123,11 @@ kubeconfig:
 vc%:
 	$(MAKE) connect-$@
 	argocd cluster add $@ --yes --upsert
-	pod --context argocd apply -f app/e/$@.yaml
 
 connect-%:
 	if vcluster connect vcluster --context pod --namespace $(second) --kube-config ~/.kube/$(second) --kube-config-context-name $(second) --update-current=false --server vcluster.$(second).svc.cluster.local; then \
 		set -x; \
-		env KUBECONFIG=~/.kube/config:~/.kube/$(second) kubectl config view --flatten > ~/.kube/config.$(second); \
+		env KUBECONFIG=~/.kube/$(second):~/.kube/config kubectl config view --flatten > ~/.kube/config.$(second); \
 		mv ~/.kube/config.$(second) ~/.kube/config; \
 		fi
 
