--- a/.env
+++ b/.env
@@ -62,6 +62,7 @@ TAILSCALE=1.30.2
 TEMPORAL=1.18.0
 TEMPORALITE=0.2.0
 TERRAFORM=1.3.2
+TERRAGRUNT=0.39.1
 TILT=0.30.9
 TURBOREPO=1.5.5
 UBUNTU=ubuntu:focal-20220826
