updae all the things

--- a/.env
+++ b/.env
@@ -5,11 +5,12 @@ ASDFX=0.10.2
 AWSCLI=2.7.13
 AWSVAULT=6.6.0
 BUF=1.8.0
-CADDY=2.6.1
+CADDY=2.6.2
 CDKTF=0.13.0
 CILIUM=0.12.1
 CLOUDFLARED=2022.10.0
 CODESERVER=4.7.1
+CODESERVER_BUMP=1
 COREDNS=1.10.0
 COSIGN=1.13.0
 CREDENTIALPASS=0.7.0
@@ -17,14 +18,14 @@ CUE=0.4.3
 DIFFT=0.36.1
 DOCKER=20.10.18
 DOCTL=1.83.0
-EARTHLY=0.6.25
-FLYCTL=0.0.410
+EARTHLY=0.6.26
+FLYCTL=0.0.413
 FULCIO=1.0.0-rc.0
 GH=2.17.0
 GOLANG=1.19.2
 GORELEASER=1.11.5
 GRPCURL=1.8.7
-HELM=3.9.4
+HELM=3.10.1
 HOF=0.6.7-rc.2
 HUBBLE=0.10.0
 JLESS=0.8.0
@@ -35,7 +36,7 @@ K9S=0.26.6
 KN=1.7.1
 KREW=0.4.3
 KUBEBUILDER=3.7.0
-KUBECTL=1.24.6
+KUBECTL=1.24.7
 KUMA=1.8.0
 KUSTOMIZE=4.5.7
 LITESTREAM=0.3.9
@@ -66,5 +67,5 @@ TERRAGRUNT=0.39.1
 TILT=0.30.9
 TURBOREPO=1.5.5
 UBUNTU=ubuntu:focal-20220826
-VAULT=1.11.4
+VAULT=1.12.0
 VCLUSTER=0.12.2
