--- a/Makefile.common
+++ b/Makefile.common
@@ -230,6 +230,7 @@ circus global: # Provision circus from control plane
 smiley: # Provision smiley from control plane
 	env DEFN_DEV_HOST_PORT=6445 DEFN_DEV_HOST_API=host.k3d.internal \
 		DEFN_DEV_NAME=k3d-$@ \
+		DOCKER_CONTEXT=host \
 		$(MAKE) this name=$@
 	docker system prune -f
 
