--- a/Makefile.common
+++ b/Makefile.common
@@ -203,7 +203,7 @@ this:
 	env DEFN_DEV_ARCHIVE="$$(cd tmp/$(name) && tar cvf - . | base64 | xargs | sed 's# ##g')" \
 		$(MAKE) cluster name=$(name)
 	doocker run -it --rm --privileged --pid=host alpine:edge nsenter -t 1 -m -u -n -i iptables -t filter -F DOCKER-ISOLATION-STAGE-2
-	cd app/k3d-$(name)-secrets && make secrets context=k3d-$(name)
+	cd app/k/k3d-$(name)-secrets && make secrets context=k3d-$(name)
 	if test -z "$(DEFN_DEV_MACOS)"; then \
 		argocd cluster add --yes --upsert k3d-$(name); \
 		pod apply -f $(app)/e/k3d-$(name).yaml; \
