--- a/Makefile.common
+++ b/Makefile.common
@@ -116,7 +116,7 @@ kubeconfig:
 		fi
 	touch ~/.kube/config
 	$(MAKE) perms
-	if env DOCKER_CONTEXT=host docker ps 2>/dev/null; then env DOCKER_CONTEXT=host k3d kubeconfig merge -a -d; fi
+	if docker --context=host ps 2>/dev/null; then env DOCKER_CONTEXT=host k3d kubeconfig merge -a -d; fi
 	-kubectl config use-context pod
 	k config get-contexts
 
@@ -165,7 +165,7 @@ cluster-inner:
 		--config etc/k3d.yaml \
 		--registry-config etc/registries.yaml $(DEFN_DEV_HOST_PORTMAPS) \
 		--env bar=baz@server:0
-	docker update --restart=no $(context)-server-0
+	docker --context=host update --restart=no $(context)-server-0
 	-cd $(app)/tf/$(name) && make init get plan apply
 
 vault-unseal:
@@ -202,7 +202,7 @@ this:
 	(cd tmp/$(name)/var/lib/tailscale/pod && pass tailscale_$(name)-0 | base64 -d | tar xvf -)
 	env DEFN_DEV_ARCHIVE="$$(cd tmp/$(name) && tar cvf - . | base64 | xargs | sed 's# ##g')" \
 		$(MAKE) cluster name=$(name)
-	doocker run -it --rm --privileged --pid=host alpine:edge nsenter -t 1 -m -u -n -i iptables -t filter -F DOCKER-ISOLATION-STAGE-2
+	docker --context=host run -it --rm --privileged --pid=host alpine:edge nsenter -t 1 -m -u -n -i iptables -t filter -F DOCKER-ISOLATION-STAGE-2
 	cd app/k/k3d-$(name)-secrets && make secrets context=k3d-$(name)
 	if test -z "$(DEFN_DEV_MACOS)"; then \
 		argocd cluster add --yes --upsert k3d-$(name); \
@@ -228,14 +228,14 @@ circus global: # Provision circus from control plane
 		DEFN_DEV_NAME=k3d-$@ \
 		DOCKER_CONTEXT=host \
 		$(MAKE) this name=$@
-	docker system prune -f
+	docker --context=host system prune -f
 
 smiley: # Provision smiley from control plane
 	env DEFN_DEV_HOST_PORT=6445 DEFN_DEV_HOST_API=host.k3d.internal \
 		DEFN_DEV_NAME=k3d-$@ \
 		DOCKER_CONTEXT=host \
 		$(MAKE) this name=$@
-	docker system prune -f
+	docker --context=host system prune -f
 
 control: # Provision control plane
 	$(MAKE) pull-repos
@@ -245,7 +245,7 @@ control: # Provision control plane
 		DEFN_DEV_MACOS=1 \
 		DEFN_DEV_HOST_PORTMAPS="-p 443:443@server:0 -p 80:80@server:0" \
 		$(MAKE) this name=$@
-	docker system prune -f
+	docker --context=host system prune -f
 
 meh:
 	env DIGITALOCEAN_ACCESS_TOKEN="$$(pass DIGITALOCEAN_ACCESS_TOKEN)" \
