--- a/etc/dev-tp.yaml
+++ b/etc/dev-tp.yaml
@@ -5,9 +5,9 @@ networking:
   address: {{ tsip }}
   inbound:
     - port: 30000
-      servicePort: 80
+      servicePort: 7777
       tags:
-        kuma.io/service: dev
+        kuma.io/service: pod
   admin:
     port: 19001
   transparentProxying:
