--- a/etc/dev-dp.yaml
+++ b/etc/dev-dp.yaml
@@ -5,14 +5,17 @@ networking:
   address: {{ tsip }}
   inbound:
     - port: 30000
+      address: 127.0.0.1
       servicePort: 80
       tags:
         kuma.io/service: {{ hostname }}
     - port: 30001
+      address: 127.0.0.1
       servicePort: 7777
       tags:
         kuma.io/service: whoami
     - port: 30002
+      address: 127.0.0.1
       servicePort: 2375
       tags:
         kuma.io/service: docker-{{ hostname }}
