--- a/etc/droplet-user-data.template
+++ b/etc/droplet-user-data.template
@@ -25,5 +25,9 @@ env DEFN_DEV_PRIVILEGED=true \
         --token _K3STOKEN_ \
         --role agent --image k3d-control --cluster https://100.106.117.83:6443
 
-k3d cluster create "$(uname -n)" \
+curl -sSL -o /usr/local/bin/k3d-real \
+    https://github.com/k3d-io/k3d/releases/download/v5.4.6/k3d-linux-amd64
+chmod 755 /usr/local/bin/k3d-real
+
+k3d-real cluster create "$(uname -n)" \
     --image ghcr.io/defn/dev:latest-k3d-base
