--- a/etc/droplet-user-data.template
+++ b/etc/droplet-user-data.template
@@ -22,12 +22,14 @@ rm -f Dockerfile
 #chown 165536:165536 /dev/net/tun
 env DEFN_DEV_PRIVILEGED=true \
     k3d node create "$(uname -n)" \
+        --image k3d-control \
         --token _K3STOKEN_ \
-        --role agent --image k3d-control --cluster https://100.106.117.83:6443
+        --role agent \
+        --cluster https://100.106.117.83:6443
 
 curl -sSL -o /usr/local/bin/k3d-real \
     https://github.com/k3d-io/k3d/releases/download/v5.4.6/k3d-linux-amd64
 chmod 755 /usr/local/bin/k3d-real
 
-k3d-real cluster create "$(uname -n)" \
-    --image ghcr.io/defn/dev:latest-k3d-base
+k3d-real cluster create global \
+    --image k3d-control
