--- a/Makefile.common
+++ b/Makefile.common
@@ -242,7 +242,7 @@ pull-repos: # Pull dev, app, home, and password-store repos
 	cd app && git pull
 	cd && cd .password-store && git pull
 
-circus global: # Provision circus from control plane
+global: # Provision global from control plane
 	env DEFN_DEV_HOST_PORT=6444 DEFN_DEV_HOST_API=host.k3d.internal \
 		DEFN_DEV_NAME=k3d-$@ \
 		DOCKER_CONTEXT=host \
