--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 ARGO=3.4.1
-ARGOCD=2.5.0-rc2
+ARGOCD=2.5.0-rc3
 ASDF=0.10.2
 ASDFX=0.10.2
 AWSCLI=2.7.13
@@ -12,15 +12,15 @@ CLOUDFLARED=2022.10.0
 CODESERVER=4.7.1
 CODESERVER_BUMP=1
 COREDNS=1.10.0
-COSIGN=1.13.0
+COSIGN=1.13.1
 CREDENTIALPASS=0.7.0
 CUE=0.4.3
 DIFFT=0.37.0
 DOCKER=20.10.18
 DOCTL=1.83.0
-EARTHLY=0.6.26
-FLYCTL=0.0.413
-FULCIO=1.0.0-rc.0
+EARTHLY=0.6.27
+FLYCTL=0.0.414
+FULCIO=1.0.0
 GH=2.17.0
 GOLANG=1.19.2
 GORELEASER=1.11.5
@@ -52,7 +52,7 @@ PNPM=7.13.1
 POWERLINE=1.22.1
 PROTOC=3.20.1
 PYTHON=system
-REKOR=1.0.0-rc.1
+REKOR=1.0.0
 RUST=1.64.0
 SHELLCHECK=0.8.0
 SHFMT=3.5.1
@@ -63,7 +63,7 @@ TAILSCALE=1.30.2
 TEMPORAL=1.18.0
 TEMPORALITE=0.2.0
 TERRAFORM=1.3.2
-TERRAGRUNT=0.39.1
+TERRAGRUNT=0.39.2
 TILT=0.30.9
 TURBOREPO=1.5.5
 UBUNTU=ubuntu:focal-20220826
