--- a/Makefile.common
+++ b/Makefile.common
@@ -212,9 +212,10 @@ vault-seal:
 	cd ~/.password-store && git add vault && git add -u vault && git stash
 
 vault-backup:
-	-$(MAKE) vault-seal
+	$(MAKE) vault-seal
 	cd .password-store && git stash apply && git add vault && git add -u vault && git commit -m "backup vault"
 	cd .password-store && git push && git status -sb
+	$(MAKE) vault-unseal
 
 vault-trust:
 	-vault auth enable -path "$(k)" kubernetes
@@ -230,6 +231,9 @@ vault-trust:
 		bound_service_account_names=default \
 		bound_service_account_namespaces=default \
 		policies=dev ttl=1h
+
+vault-shell:
+	@env VAULT_TOKEN="$$(pass Initial_Root_Token)" bash
 
 vault-test:
 	@"$(context)" exec -ti -c code-server $(pod) -- bash -c 'env VAULT_ADDR=http://$(tailscale ip -4):8200 ~/bin/e vault write -field=token "auth/$(k)/login" role=default jwt=$$(cat /run/secrets/kubernetes.io/serviceaccount/token)'
