--- a/Makefile.common
+++ b/Makefile.common
@@ -69,6 +69,8 @@ install-inner:
 	$(MAKE) perms
 	env GPG_TTY=$$(tty) $(MAKE) init-gpg
 
+	if nc -z -v localhost 8200 2>/dev/null; then $(MAKE) vault-unseal; fi
+
 	mark -- configure repos
 	if [[ ! -d ~/app/.git ]]; then \
 		mkdir -p ~/work/app \
