--- a/Makefile.common
+++ b/Makefile.common
@@ -69,7 +69,9 @@ install-inner:
 	$(MAKE) perms
 	env GPG_TTY=$$(tty) $(MAKE) init-gpg
 
-	if nc -z -v localhost 8200 2>/dev/null; then $(MAKE) vault-unseal; fi
+	if nc -z -v localhost 8200 2>/dev/null; then $(MAKE) \
+		vault-unseal; vault-trust-pod; \
+		fi
 
 	mark -- configure repos
 	if [[ ! -d ~/app/.git ]]; then \
@@ -236,6 +238,9 @@ vault-trust:
 
 vault-shell:
 	@env VAULT_ADDR="http://localhost:8200" VAULT_TOKEN="$$(pass Initial_Root_Token)" bash
+
+vault-trust-pod:
+	@env VAULT_ADDR="http://localhost:8200" VAULT_TOKEN="$$(pass Initial_Root_Token)" $(MAKE) vault-trust k=pod
 
 vault-test:
 	@"$(context)" exec -ti -c code-server $(pod) -- bash -c 'env VAULT_ADDR=http://$(tailscale ip -4):8200 ~/bin/e vault write -field=token "auth/$(k)/login" role=default jwt=$$(cat /run/secrets/kubernetes.io/serviceaccount/token)'
