trust pod after login

--- a/Makefile.common
+++ b/Makefile.common
@@ -70,7 +70,7 @@ install-inner:
 	env GPG_TTY=$$(tty) $(MAKE) init-gpg
 
 	if nc -z -v localhost 8200 2>/dev/null; then \
-		$(MAKE) vault-unseal; $(MAKE) vault-trust-pod; \
+		$(MAKE) vault-unseal; \
 		fi
 
 	mark -- configure repos
@@ -83,6 +83,10 @@ install-inner:
 		fi
 
 	$(MAKE) login
+	if nc -z -v localhost 8200 2>/dev/null; then \
+		$(MAKE) vault-trust-pod; \
+		fi
+
 	$(MAKE) manage
 
 	mark -- configure site
