--- a/Makefile.common
+++ b/Makefile.common
@@ -69,10 +69,6 @@ install-inner:
 	$(MAKE) perms
 	env GPG_TTY=$$(tty) $(MAKE) init-gpg
 
-	if nc -z -v localhost 8200 2>/dev/null; then \
-		$(MAKE) vault-unseal; \
-		fi
-
 	mark -- configure repos
 	if [[ ! -d ~/app/.git ]]; then \
 		mkdir -p ~/work/app \
@@ -84,6 +80,7 @@ install-inner:
 
 	$(MAKE) login
 	if nc -z -v localhost 8200 2>/dev/null; then \
+		$(MAKE) vault-unseal; \
 		$(MAKE) vault-trust-pod; \
 		fi
 
@@ -245,6 +242,7 @@ vault-shell:
 
 vault-trust-pod:
 	@env VAULT_ADDR="http://localhost:8200" VAULT_TOKEN="$$(pass Initial_Root_Token)" $(MAKE) vault-trust k=pod
+	pod exec control-0 -c vault-agent -- 'pkill -9 vaul[t]'
 
 vault-test:
 	@"$(context)" exec -ti -c code-server $(pod) -- bash -c 'env VAULT_ADDR=http://$(tailscale ip -4):8200 ~/bin/e vault write -field=token "auth/$(k)/login" role=default jwt=$$(cat /run/secrets/kubernetes.io/serviceaccount/token)'
