--- a/Makefile.common
+++ b/Makefile.common
@@ -242,7 +242,7 @@ vault-shell:
 
 vault-trust-pod:
 	@env VAULT_ADDR="http://localhost:8200" VAULT_TOKEN="$$(pass Initial_Root_Token)" $(MAKE) vault-trust k=pod
-	pod exec control-0 -c vault-agent -- 'pkill -9 vaul[t]'
+	pod exec control-0 -c vault-agent -- pkill -9 'vaul[t]'
 
 vault-test:
 	@"$(context)" exec -ti -c code-server $(pod) -- bash -c 'env VAULT_ADDR=http://$(tailscale ip -4):8200 ~/bin/e vault write -field=token "auth/$(k)/login" role=default jwt=$$(cat /run/secrets/kubernetes.io/serviceaccount/token)'
