--- a/Makefile.common
+++ b/Makefile.common
@@ -230,7 +230,7 @@ vault-backup:
 	$(MAKE) vault-unseal
 
 vault-trust:
-	-vault auth enable -path "$(k)" kubernetes
+	#-vault auth enable -path "$(k)" kubernetes
 
 	vault write "auth/$(k)/config" \
 		kubernetes_host="$$(kubectl config view -o jsonpath='{.clusters[?(@.name == "$(k)")]}' --raw | jq -r '.cluster.server')" \
