--- a/Makefile.common
+++ b/Makefile.common
@@ -91,7 +91,7 @@ install-inner:
 
 	$(MAKE) login
 
-	$(MAKE) manage
+	@env VAULT_ADDR="http://localhost:8200" VAULT_TOKEN="$$(pass Initial_Root_Token)" $(MAKE) manage
 
 	mark -- configure site
 	$(MAKE) install-site
