--- a/Makefile.common
+++ b/Makefile.common
@@ -295,13 +295,14 @@ this:
 	docker --context=host run -it --rm --privileged --pid=host alpine:edge nsenter -t 1 -m -u -n -i iptables -t filter -F DOCKER-ISOLATION-STAGE-2
 	cd app/k/k3d-$(name)-secrets && make secrets context=k3d-$(name)
 	if test -z "$(DEFN_DEV_MACOS)"; then \
+		env VAULT_ADDR="http://localhost:8200" VAULT_TOKEN="$$(pass Initial_Root_Token)" $(MAKE) vault-trust k=k3d-$(name); \
 		argocd cluster add --yes --upsert k3d-$(name); \
 		pod apply -f $(app)/e/k3d-$(name).yaml; \
 	else \
 		(cd ~/.password-store && oras push localhost:5000/defn/bootstrap:password-store .git:+tar); \
 		(cd app && oras push localhost:5000/defn/bootstrap:app .git:+tar); \
 		kubectl --context k3d-$(name) rollout -n default status statefulset $(name) --watch; \
-	fi
+		fi
 
 registry:
 	-k3d registry create registry --port 0.0.0.0:5000
